# scholars

./: Cargo.toml  README.md
.github/workflows/: ci.yaml
examples/: author_async_query.rs  author_blocking_query.rs  author_papers_async_paged.rs  author_papers_blocking_paged.rs  author_search_async_paged.rs  author_search_blocking_paged.rs  paper_async_query.rs  paper_authors_async_paged.rs  paper_authors_blocking_paged.rs  paper_blocking_query.rs  paper_citations_async_paged.rs  paper_citations_blocking_paged.rs  paper_references_async_paged.rs  paper_references_blocking_paged.rs  paper_search_async_paged.rs  paper_search_async_query.rs  paper_search_blocking_paged.rs  paper_search_blocking_query.rs
json_schemes/: semantic-scholar-v1.0.json
query_string/: Cargo.toml
query_string/src/: lib.rs
query_string/tests/: api.rs
src/: client.rs  endpoint.rs  error.rs  lib.rs  macros.rs  query.rs  reqwest.rs  serialize.rs  static_url.rs  urlencoded.rs
src/v1/: error.rs  mod.rs  pagination.rs  query_params.rs  static_url.rs  utils.rs
src/v1/definition/: author.rs  batch.rs  citation.rs  embedding.rs  mod.rs  paper.rs  reference.rs  tldr.rs
src/v1/endpoint/: iter.rs  mod.rs
src/v1/endpoint/author/: mod.rs  papers.rs  search.rs
src/v1/endpoint/paper/: authors.rs  citations.rs  mod.rs  references.rs  search.rs
src/v1/pagination/: limit.rs  mod.rs
src/v1/pagination/parameter/: constrained.rs  limit.rs  mod.rs  offset.rs
src/v1/parameter/: author.rs  mod.rs  paper.rs
