[package]
name = "scholars"
version = "0.0.2"
edition = "2021"
rust-version = "1.59"
license = "MIT"
readme = "README.md"

description = "A client library for the Semantic Scholar Academic Graph API."
repository = "https://github.com/pedromfedricci/scholars"
documentation = "https://docs.rs/scholars"
authors = ["Pedro de Matos Fedricci <pedromfedricci@gmail.com>"]

categories = ["web-programming", "api-bindings"]
keywords = ["semantic-scholar", "research", "academic"]

exclude = ["/json_schemes", "/.github/", "/rustfmt.toml", "/.gitignore"]

[workspace]
members = [".", "query_string"]

[profile.release]
lto = true

[features]
v1 = ["__v"]
async = ["__v", "async-trait", "futures-core", "pin-project"]
blocking = ["__v"]
reqwest-async = ["reqwest", "async"]
reqwest-blocking = ["reqwest/blocking", "blocking"]
__v = []

[dependencies]
bytes = { version = "1.0" }
form_urlencoded = { version = "1.0" }
http = { version = "0.2" }
log = { version = "0.4" }
serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0" }
serde_urlencoded = { version = "0.7" }
serde_with = { version = "1.0" }
thiserror = { version = "1.0" }
url = { version = "2.0" }
static_assertions = { version = "1.1" }

# Optional
async-trait = { version = "0.1", optional = true }
reqwest = { version = "0.11", optional = true }
futures-core = { version = "0.3", optional = true }
pin-project = { version = "1.0", optional = true }

[dev-dependencies]
anyhow = { version = "1.0" }
serde_test = { version = "1.0" }
tokio = { version = "1.4", features = ["macros", "rt-multi-thread"] }
env_logger = { version = "0.9" }
futures-util = { version = "0.3", default-features = false }

# Examples

# Blocking examples
[[example]]
name = "author_blocking_query"
required-features = ["v1", "reqwest-blocking"]

[[example]]
name = "author_papers_blocking_paged"
required-features = ["v1", "reqwest-blocking"]

[[example]]
name = "author_search_blocking_paged"
required-features = ["v1", "reqwest-blocking"]

[[example]]
name = "paper_authors_blocking_paged"
required-features = ["v1", "reqwest-blocking"]

[[example]]
name = "paper_blocking_query"
required-features = ["v1", "reqwest-blocking"]

[[example]]
name = "paper_citations_blocking_paged"
required-features = ["v1", "reqwest-blocking"]

[[example]]
name = "paper_references_blocking_paged"
required-features = ["v1", "reqwest-blocking"]

[[example]]
name = "paper_search_blocking_paged"
required-features = ["v1", "reqwest-blocking"]

[[example]]
name = "paper_search_blocking_query"
required-features = ["v1", "reqwest-blocking"]

# Async examples
[[example]]
name = "author_async_query"
required-features = ["v1", "reqwest-async"]

[[example]]
name = "author_papers_async_paged"
required-features = ["v1", "reqwest-async"]

[[example]]
name = "author_search_async_paged"
required-features = ["v1", "reqwest-async"]

[[example]]
name = "paper_async_query"
required-features = ["v1", "reqwest-async"]

[[example]]
name = "paper_authors_async_paged"
required-features = ["v1", "reqwest-async"]

[[example]]
name = "paper_citations_async_paged"
required-features = ["v1", "reqwest-async"]

[[example]]
name = "paper_references_async_paged"
required-features = ["v1", "reqwest-async"]

[[example]]
name = "paper_search_async_paged"
required-features = ["v1", "reqwest-async"]

[[example]]
name = "paper_search_async_query"
required-features = ["v1", "reqwest-async"]
